--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,4 +6,5 @@
   <div class="cart-icon">
     <a routerLink="/cart"><img src="../../assets/cart.png" ></a>
   </div>
+  <div class="counter">Counter: {{ countProducts$ | async }}</div>
 </div>
