--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -25,3 +25,11 @@
   margin-top: 10px;
   margin-right: 20px;
 }
+
+.counter {
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: larger;
+  font-weight: 900;
+}
