selector total price

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,4 +7,5 @@
     <a routerLink="/cart"><img src="../../assets/cart.png" ></a>
   </div>
   <div class="counter">Counter: {{ countProducts$ | async }}</div>
+  <div class="total-price">Total Price: {{ totalPrice$ | async | number : '1.2-2'}}</div>
 </div>
