--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -29,7 +29,14 @@
 .counter {
   margin-top: 20px;
   margin-left: 20px;
-  margin-right: 20px;
   font-size: larger;
   font-weight: 900;
+}
+
+.total-price {
+  margin-top: 20px;
+  margin-left: 20px;
+  font-size: larger;
+  font-weight: 900;
+  margin-right: 20px;
 }
