--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -21,6 +21,10 @@
   text-decoration: none;
 }
 
+.route-link:hover {
+  color: brown;
+}
+
 .cart-icon {
   margin-top: 10px;
   margin-right: 20px;
